Implement get Summary Mode for REL strategy